--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                                 </li>
                                 <li>Once you get accepted, please change your username with this format:
                                 </li>
-                                <span> @FAVOname (example: @FAVOJean - @FAVOEula)
-                                    Please advise whether we use upper case for name</span>
+                                <span> @FAVOName (example: @FAVOJean - @FAVOEula)
+                                </span>
                                 <li>Further information after the Grand Opening will be posted on the main account.
                                 </li>
                             </ol>
